log
Thu 21 Mar 2024 03:46:15 PM UTC: 
 tests:  0|5
total_score: 0/70
6766134
Thu 21 Mar 2024 03:49:44 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   51 |       push_back(L, dato);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
d69fa49
Thu 21 Mar 2024 03:50:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
4191a0a
Thu 21 Mar 2024 04:00:11 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
599e16c
Thu 21 Mar 2024 08:07:02 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
74cf533
Thu 21 Mar 2024 08:13:53 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
fd6fa2f
Thu 21 Mar 2024 08:14:41 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|3
total_score: 20/70
86ada6a
Thu 21 Mar 2024 08:17:03 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
e0a11dd
Thu 21 Mar 2024 08:21:12 PM UTC: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  3|2
total_score: 40/70
c42e93a
Thu 21 Mar 2024 08:23:33 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|3
total_score: 20/70
ab63040
Thu 21 Mar 2024 08:24:36 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
673158a
Thu 21 Mar 2024 08:39:55 PM UTC: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|1
total_score: 50/70
607c484
Thu 21 Mar 2024 09:14:56 PM UTC: 
 exercises.c | 57 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 57 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:134:36: error: lvalue required as left operand of assignment
  134 |   while ((*dato) != '\0' && balanc = 1)
      |                                    ^
Compilation failed
a9d8471
Thu 21 Mar 2024 09:15:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:134:36: error: lvalue required as left operand of assignment
  134 |   while ((*dato) != '\0' && balanc = 1)
      |                                    ^
Compilation failed
d0d2658
Thu 21 Mar 2024 09:15:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
055879e
Thu 21 Mar 2024 09:17:01 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
e48f6ed
Thu 21 Mar 2024 09:17:48 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
6ee7c73
Thu 21 Mar 2024 09:18:52 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
2469820
Thu 21 Mar 2024 09:19:28 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
119a0d4
Thu 21 Mar 2024 10:58:39 PM UTC: 
 exercises.c | 64 +++++++++----------------------------------------------------
 1 file changed, 9 insertions(+), 55 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:139:49: error: expected expression before ‘||’ token
  139 |         if ((*dato) != '(' && cadena[i] == ')') || (*dato) != '[' && cadena[i] == ']' || (*dato) != '{' && cadena[i] == '}') return 0;
      |                                                 ^~
exercises.c:139:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  139 |         if ((*dato) != '(' && cadena[i] == ')') || (*dato) != '[' && cadena[i] == ']' || (*dato) != '{' && cadena[i] == '}') return 0;
      |         ^~
exercises.c:139:124: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  139 |         if ((*dato) != '(' && cadena[i] == ')') || (*dato) != '[' && cadena[i] == ']' || (*dato) != '{' && cadena[i] == '}') return 0;
      |                                                                                                                            ^
exercises.c:139:124: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
577e2d8
